SAR Blai Sandbox/src/objects/Centros_NOC__c.object
<CustomObject>
    <description>Centros que comparten una misma NOC</description>
    <fields>
        <fullName>Activo__c</fullName>
        <label>Activo</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Campo_control_duplicados__c</fullName>
        <label>Campo control duplicados</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Central__c</fullName>
        <label>Central</label>
        <picklist>
            <picklistValues>
                <fullName>MADRID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEVILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEVILLA NACIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADRID_Prueba</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Centros NOCs</relationshipLabel>
        <relationshipName>Centros_NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cuota_inicial__c</fullName>
        <label>Cuota inicial</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Descuento_Dispositivo__c</fullName>
        <label>Descuento Dispositivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Periodo_1__c</fullName>
        <label>Descuento Periodo 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Periodo_2__c</fullName>
        <label>Descuento Periodo 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Periodo_3__c</fullName>
        <label>Descuento Periodo 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <label>Descuento</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_permanente_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento permanente 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descuento_permanente_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento permanente 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descuento_permanente_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento permanente 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>División</label>
        <picklist>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAR Domus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEX</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Duracion_Periodo_1__c</fullName>
        <inlineHelpText>En días</inlineHelpText>
        <label>Duración Periodo 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_Periodo_2__c</fullName>
        <inlineHelpText>En días</inlineHelpText>
        <label>Duración Periodo 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_Periodo_3__c</fullName>
        <inlineHelpText>En días</inlineHelpText>
        <label>Duración Periodo 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grado__c</fullName>
        <label>Grado</label>
        <picklist>
            <picklistValues>
                <fullName>Grado 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grado 3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Importe_Periodo_1__c</fullName>
        <label>Importe Periodo 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importe_Periodo_2__c</fullName>
        <label>Importe Periodo 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importe_Periodo_3__c</fullName>
        <label>Importe Periodo 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOC_TAD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBd0,012b0000000QBcg</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Centros / Servicios NOCs TA</relationshipLabel>
        <relationshipName>Centros_NOCs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOC</label>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Centros / Servicios NOCs Residencial</relationshipLabel>
        <relationshipName>Centros_NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Precio_Dispositivo_Base__c</fullName>
        <formula>Tarifa_TA__r.Precio_dispositivo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Dispositivo (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Dispositivo__c</fullName>
        <label>Precio Dispositivo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_Servicio_Base__c</fullName>
        <formula>Tarifa_TA__r.Precio_servicio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Servicio (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_UCR_adicional_Base__c</fullName>
        <formula>Tarifa_TA__r.Precio_ucr_adicional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio UCR adicional (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio__c</fullName>
        <label>Precio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <formula>TEXT( Centro__r.Provincia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio TA</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Centros NOCs (Servicio TA)</relationshipLabel>
        <relationshipName>Centros_NOCs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Servicio__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012110000000hiy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Centros NOCs</relationshipLabel>
        <relationshipName>Centros_NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tarifa_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tarifa TA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tarifa__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tarifas TAD, Tarifas TAM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tarifa__c</referenceTo>
        <relationshipLabel>Centros NOCs</relationshipLabel>
        <relationshipName>Centros_NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Estancia_2__c</fullName>
        <label>Tipo Estancia</label>
        <picklist>
            <picklistValues>
                <fullName>Permanente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Ocupacion_2__c</fullName>
        <label>Tipo Ocupación</label>
        <picklist>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI Baño Compartido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Uso Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornada Completa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Jornada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 hora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 horas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Servicio_2__c</fullName>
        <label>Tipo Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Centro de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro de Noche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convalecencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fijo Discontinuo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital de Día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paleativo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_periferico__c</fullName>
        <label>Tipo de periférico</label>
        <picklist>
            <picklistValues>
                <fullName>Periférico Movil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per. Humo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per. Gas (butano, propano y natural)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per. Movilidad (detector de pasillo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per. Presencia (electroimán)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio_TA__c</fullName>
        <label>Tipo de servicio TA</label>
        <picklist>
            <picklistValues>
                <fullName>Adapta 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento Especial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>+Seguro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Te acompaña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispositivo tipo A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colgante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esencial 10</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo_estancia__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Estancia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo estancia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_ocupacion__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Ocupacion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo ocupación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_servicio__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transporte__c</fullName>
        <label>Transporte</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial_2__c</fullName>
        <label>Zona Comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Occidental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Oriental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaragoza</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial__c</fullName>
        <formula>text( Centro__r.Zona_Comercial_del__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zona Comercial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zona_Territorial__c</fullName>
        <formula>TEXT(Centro__r.Zona_Comercial_del__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zona Territorial</label>
        <type>Text</type>
    </fields>
    <label>Centros/Servicios NOC</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Nombre de Centros NOC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centros NOCs</pluralLabel>
    <recordTypes>
        <fullName>Centros_NOC</fullName>
        <active>true</active>
        <label>Centros NOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Centros_Servicios_NOC</fullName>
        <active>false</active>
        <label>Centros/Servicios NOC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Centros_Servicios_NOC_TA</fullName>
        <active>true</active>
        <label>Centros/Servicios NOC TA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Centros_Servicios_NOC_mejorada</fullName>
        <active>true</active>
        <label>Centros/Servicios NOC (mejorada)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Servicios_NOC</fullName>
        <active>true</active>
        <label>Servicios NOC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bloquear_NOC_Aprobada</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(NOC__r.Estado_Flujo__c , &apos;Aprobado&apos;) &amp;&amp; $Profile.Id &lt;&gt; &apos;00eb0000000zplj&apos;</errorConditionFormula>
        <errorMessage>No se puede modificar una NOC Aprobada</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Descuento_no_valido</fullName>
        <active>true</active>
        <errorConditionFormula>Descuento__c &gt; 1 || Descuento__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Descuento__c</errorDisplayField>
        <errorMessage>Descuento no válido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Importe_o_descuento</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT( ISBLANK(Importe_Periodo_1__c) ) &amp;&amp; NOT( ISBLANK( Descuento_Periodo_1__c ) )) ||  
(NOT( ISBLANK(Importe_Periodo_2__c) ) &amp;&amp; NOT( ISBLANK( Descuento_Periodo_2__c ) )) || 
(NOT( ISBLANK(Importe_Periodo_3__c) ) &amp;&amp; NOT( ISBLANK( Descuento_Periodo_3__c ) ))</errorConditionFormula>
        <errorMessage>Sólo se permite informar importes o descuentos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Division_Zona_Comercial_o_Cent</fullName>
        <active>true</active>
        <errorConditionFormula>((ISBLANK(Division__c)  &amp;&amp;   ISBLANK(Zona_Comercial_2__c  )  &amp;&amp;   ISBLANK(Centro__c ) )  || 

(NOT(ISBLANK(Division__c))  &amp;&amp;   (NOT(ISBLANK(Zona_Comercial_2__c  ))   ||    NOT(ISBLANK(Centro__c ))) )  || 

(NOT(ISBLANK(Zona_Comercial_2__c  ))  &amp;&amp;   (NOT(ISBLANK(Division__c))   ||    NOT(ISBLANK(Centro__c ))) )  || 

(NOT(ISBLANK(Centro__c ))  &amp;&amp;   (NOT(ISBLANK(Zona_Comercial_2__c  ))   ||  NOT(ISBLANK(Division__c))  ) )) &amp;&amp;  RecordType.Id !=&apos;012110000000hj3&apos;</errorConditionFormula>
        <errorMessage>Debe estar informado sólo uno de los 3 campos: División, Zona Comercial o Centro</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_Duracion</fullName>
        <active>true</active>
        <errorConditionFormula>((NOT( ISBLANK(Importe_Periodo_1__c) ) || NOT( ISBLANK( Descuento_Periodo_1__c ))) &amp;&amp; ISBLANK( Duracion_Periodo_1__c ) &amp;&amp;  Descuento_permanente_1__c=false) || ((NOT( ISBLANK(Importe_Periodo_2__c) ) || NOT( ISBLANK( Descuento_Periodo_2__c ))) &amp;&amp; ISBLANK( Duracion_Periodo_2__c ) &amp;&amp; Descuento_permanente_2__c=false) || ((NOT( ISBLANK(Importe_Periodo_3__c) ) || NOT( ISBLANK( Descuento_Periodo_3__c ))) &amp;&amp; ISBLANK( Duracion_Periodo_3__c ) &amp;&amp; Descuento_permanente_3__c=false)</errorConditionFormula>
        <errorMessage>Se tiene que seleccionar una Duración del descuento.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_descuento</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName &lt;&gt;&apos;Centros_Servicios_NOC_TA&apos;  &amp;&amp; (ISBLANK(Descuento__c)   &amp;&amp;  ISBLANK( Precio__c ) )  ||  ( NOT(ISBLANK(Descuento__c))   &amp;&amp;  NOT(ISBLANK(Precio__c )) )</errorConditionFormula>
        <errorMessage>Es obligatorio informar un descuento o precio final</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_grado</fullName>
        <active>true</active>
        <errorConditionFormula>INCLUDES(  Tipo_Estancia_2__c , &apos;Permanente&apos;) &amp;&amp;  ISBLANK( Grado__c )</errorConditionFormula>
        <errorDisplayField>Grado__c</errorDisplayField>
        <errorMessage>Campo obligatorio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_servicio</fullName>
        <active>false</active>
        <description>Sólo se permite escojer un servicio</description>
        <errorConditionFormula>RecordType.DeveloperName=&apos;Centros_Servicios_NOC_TA&apos;  &amp;&amp; 
 (ISBLANK( Servicio__c )  &amp;&amp;  Servicio_sin_colgante__c =false  &amp;&amp;  Servicio_con_colgante__c=false) || 
(NOT(ISBLANK( Servicio__c ))  &amp;&amp;  Servicio_sin_colgante__c =true &amp;&amp;  Servicio_con_colgante__c=true) ||
(NOT(ISBLANK( Servicio__c ))  &amp;&amp;  Servicio_sin_colgante__c =true &amp;&amp;  Servicio_con_colgante__c=false) ||
(NOT(ISBLANK( Servicio__c ))  &amp;&amp;  Servicio_sin_colgante__c =false &amp;&amp;  Servicio_con_colgante__c=true) ||
(ISBLANK( Servicio__c )  &amp;&amp;  Servicio_sin_colgante__c =true &amp;&amp;  Servicio_con_colgante__c=true)</errorConditionFormula>
        <errorMessage>Debe escojer solamente un servicio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_solo_un_periodo_como_permanente</fullName>
        <active>true</active>
        <errorConditionFormula>( Descuento_permanente_1__c= true  &amp;&amp;   (Descuento_permanente_2__c =true  ||  Descuento_permanente_3__c =true))
 || 
(Descuento_permanente_2__c= true  &amp;&amp;   (Descuento_permanente_1__c =true  ||  Descuento_permanente_3__c =true))
 || 
(Descuento_permanente_3__c= true  &amp;&amp;   (Descuento_permanente_2__c =true  ||  Descuento_permanente_1__c =true))</errorConditionFormula>
        <errorMessage>Sólo se puede informar un periodo permaente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_informar_duracion_periodo_permanente</fullName>
        <active>true</active>
        <errorConditionFormula>( Descuento_permanente_1__c =true   &amp;&amp;   NOT(ISBLANK(  Duracion_Periodo_1__c )))
  || 
(Descuento_permanente_2__c=true   &amp;&amp;   NOT(ISBLANK(  Duracion_Periodo_2__c )))
 || 
(Descuento_permanente_3__c=true   &amp;&amp;   NOT(ISBLANK(  Duracion_Periodo_3__c )))</errorConditionFormula>
        <errorMessage>No se puede informar duración de un periodo con descuento permanente</errorMessage>
    </validationRules>
</CustomObject>